[package]
name = "cargo-toml-version-change"
version = "0.1.7"
authors = ["thom bogers <thom.bogers@gmail.com>"]
edition = "2018"
description = "cargo-toml-version-change for docker cache"
license = "MIT"
homepage = "https://github.com/ThomBogers/dummy-cargo-toml-creater"
repository = "https://github.com/ThomBogers/dummy-cargo-toml-creater"
license-file = "LICENSE"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_toml = "0.8.0"
toml_edit = "0.1.5"
toml = "0.5.5"